footer social icon spacing fix

--- a/public/assets/scss/partials/_content.scss
+++ b/public/assets/scss/partials/_content.scss
@@ -1938,7 +1938,7 @@ ul, li {
   }
   .social {
     a {
-      margin-right: 30px;
+
     }
   }
   .social {
@@ -1955,6 +1955,10 @@ ul, li {
       font-size: 18px;
       font-weight: normal;
       position: relative;
+      margin-left: 30px;
+      &:first-child {
+        margin-left: 0;
+      }
       i {
         position: relative;
         z-index: 20;
